--- a/sub-01.html
+++ b/sub-01.html
@@ -9,10 +9,15 @@
   <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
-  <div id="cl-switch-container">
-    <div id="cl-switch" class="cl-switch-on">
+  <div class="cl-switch-container">
+    <div class="cl-switch-on">
+      <img src="assets/botton-on.gif">
     </div>
+  <a href="sub-02.html">
+    <div class="cl-switch-off">
+      <img src="assets/botton-off.png">
+    </div>
+  </a>
   </div>
-  <script src="1.js"></script>
 </body>
-</html>
+</html
