--- a/sub-02.html
+++ b/sub-02.html
@@ -9,10 +9,13 @@
   <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
-  <div id="cl-switch-container">
-    <div id="cl-switch" class="cl-switch-on">
+  <div class="cl-switch-container">
+    <div class="cl-switch-on">
+      <img src="assets/light-on.gif">
+    </div>
+    <div class="cl-switch-off">
+      <img src="assets/light-off.png">
     </div>
   </div>
-  <script src="1.js"></script>
 </body>
-</html>
+</html
