--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   <title>Click</title>
   <link rel="stylesheet" href="site.css">
   <link rel="shortcut icon" type="image/png" href="favicon.ico">
+  <style>
+  @font-face {
+    font-family: PIXEAL;
+    src: url( Minecraft.ttf);
+  }
+</style>
 </head>
 <body>
+  <div class="text-container">
+    <a href="sub-01.html"><p style="color:#ff9999">NEXT</p></a>
+  </div>
   <div id="cl-switch" class="cl-switch-container">
     <div class="cl-switch-on">
       <img src="assets/switch-on-croped.png">
